--- a/index.html
+++ b/index.html
@@ -1,57 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Safr Candles - Coming Soon</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="coming-soon-container">
+    <div class="content">
+      <h1 class="brand-name">Safr Candles</h1>
+      <h2 class="tagline">Invoking Nostalgia, One Candle at a Time</h2>
+      <p class="coming-soon-text">Coming Soon</p>
+      <!-- Subscription form -->
+      <form class="subscription-form">
+        <input type="email" placeholder="Enter your email" aria-label="Email for updates" required>
+        <button type="submit">Subscribe</button>
+      </form>
+    </div>
+  </div>
 
-(function ($) {
-    "use strict";
-
-    /*==================================================================
-    [ Validate ]*/
-    var input = $('.validate-input .input100');
-
-    $('.validate-form').on('submit',function(){
-        var check = true;
-
-        for(var i=0; i<input.length; i++) {
-            if(validate(input[i]) == false){
-                showValidate(input[i]);
-                check=false;
-            }
-        }
-
-        return check;
-    });
-
-
-    $('.validate-form .input100').each(function(){
-        $(this).focus(function(){
-           hideValidate(this);
-        });
-    });
-
-    function validate (input) {
-        if($(input).attr('type') == 'email' || $(input).attr('name') == 'email') {
-            if($(input).val().trim().match(/^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{1,5}|[0-9]{1,3})(\]?)$/) == null) {
-                return false;
-            }
-        }
-        else {
-            if($(input).val().trim() == ''){
-                return false;
-            }
-        }
-    }
-
-    function showValidate(input) {
-        var thisAlert = $(input).parent();
-
-        $(thisAlert).addClass('alert-validate');
-    }
-
-    function hideValidate(input) {
-        var thisAlert = $(input).parent();
-
-        $(thisAlert).removeClass('alert-validate');
-    }
-
-    
-    
-
-})(jQuery);
+  <footer>
+    <div class="social-links">
+      <a href="https://www.instagram.com/safrcandles?igsh=YnI1OWZmb3VnbDJr" target="_blank" aria-label="Instagram">
+        <img src="instagram-icon.png" alt="Instagram" class="instagram-icon">
+      </a>
+      <a href="https://www.tiktok.com/@safr.candles?_t=8pj4FGuxqeU&_r=1" target="_blank" aria-label="TikTok">
+        <img src="tiktok-icon.png" alt="TikTok" class="tiktok-icon">
+      </a>
+    </div>
+  </footer>
+</body>
+</html>
