--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="coming-soon-container">
     <div class="content">
       <h1 class="brand-name">Safr Candles</h1>
-      <h2 class="tagline">Invoking Nostalgia, One Candle at a Time</h2>
+      <h2 class="tagline">Premium, hand-poured candles inspired by South Asian scents and memories</h2>
       <p class="coming-soon-text">Coming Soon</p>
       <!-- Subscription form -->
       <form class="subscription-form">
