--- a/index.html
+++ b/index.html
@@ -13,13 +13,45 @@
       <h2 class="tagline">Premium, hand-poured candles inspired by South Asian scents and memories</h2>
       <p class="coming-soon-text">Coming Soon</p>
       <!-- Subscription form -->
-      <form class="subscription-form">
-        <input type="email" placeholder="Enter your email" aria-label="Email for updates" required>
+      <form class="subscription-form" id="emailForm">
+        <input type="email" id="emailInput" placeholder="Enter your email" aria-label="Email for updates" required>
         <button type="submit">Subscribe</button>
       </form>
     </div>
   </div>
-
+  
+  <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycby19IqijkMMz55nl_7_TLgTC7dsOYUm4dw2wOw9ydzMoJoSDDW7BdS6_cxFGFgKS2HJ/exec';  // Replace with your Google Apps Script Web App URL
+  
+    document.getElementById('emailForm').addEventListener('submit', function(event) {
+      event.preventDefault();
+  
+      const email = document.getElementById('emailInput').value;
+      
+      fetch(scriptURL, {
+        method: 'POST',
+        mode: 'cors',
+        headers: {
+          'Content-Type': 'application/x-www-form-urlencoded',
+        },
+        body: new URLSearchParams({
+          'email': email  // This key matches what is expected in your Apps Script
+        })
+      })
+      .then(response => {
+        if (response.ok) {
+          alert('Thank you for subscribing!');
+        } else {
+          alert('Something went wrong. Please try again later.');
+        }
+      })
+      .catch(error => alert('Error: ' + error.message));
+  
+      // Optionally, clear the input field
+      document.getElementById('emailInput').value = '';
+    });
+  </script>
+  
   <footer>
     <div class="social-links">
       <a href="https://www.instagram.com/safrcandles?igsh=YnI1OWZmb3VnbDJr" target="_blank" aria-label="Instagram">
