--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  
+   <header>
+    <div class="logo-container">
+      <img src="safrlogo.svg" alt="Safr Candles Logo" class="logo">
+    </div>
+  </header>
+  
   <div class="coming-soon-container">
     <div class="content">
       <h1 class="brand-name">Safr Candles</h1>
